# gamecraft-bench

./: .env.example  .gitignore  README.md  pyproject.toml
gamecraft_bench/: config.py  local_agents.py  local_env.py
gamecraft_bench/dashboard/: manager.py  server.py
gamecraft_bench/verifier/: __init__.py  __main__.py  cli.py  replay.py  score.py
scripts/: build_catalog.py  build_catalog_oga.py  catalog.json  catalog_oga.json  dashboard_service.sh  fetch_assets.py  fetch_oga_assets.py  run.sh  run_claude_code_mimo_2_5.sh  run_claude_code_opus_4_7.sh  run_codex_gpt_5_5.sh  run_kimi_code.sh
tasks/cardgame-autobattler/: instruction.md  task.toml
tasks/cardgame-gwent-war/: instruction.md  task.toml
tasks/cardgame-inscription-dark/: instruction.md  task.toml
tasks/cardgame-poker-roguelike/: instruction.md  task.toml
tasks/cardgame-spire-descent/: instruction.md  task.toml
tasks/example/: annotation.md  instruction.md  task.toml
tasks/horror-dollhouse/: instruction.md  task.toml
tasks/horror-floor-13/: instruction.md  task.toml
tasks/horror-lighthouse/: instruction.md  task.toml
tasks/horror-signal-lost/: instruction.md  task.toml
tasks/horror-tape-archive/: instruction.md  task.toml
tasks/idle-ant-empire/: instruction.md  task.toml
tasks/idle-dungeon-guild/: instruction.md  task.toml
tasks/idle-factory-planet/: instruction.md  task.toml
tasks/idle-spell-tower/: instruction.md  task.toml
tasks/openworld-airship-trader/: instruction.md  task.toml
tasks/openworld-ghost/: task.toml  (+1 more)
tools/: godot_command_line.md  screenshot.gd  screenshot.sh
(+885 files in other folders)
